--- a/package.json
+++ b/package.json
@@ -102,16 +102,16 @@
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
-		"@types/vscode": "^1.44.0",
+		"@types/vscode": "^1.70.0",
 		"@typescript-eslint/eslint-plugin": "^2.26.0",
 		"@typescript-eslint/parser": "^2.26.0",
 		"eslint": "^6.8.0",
 		"mocha": "^7.1.1",
-		"ts-loader": "^7.0.1",
-		"typescript": "^3.8.3",
+		"ts-loader": "^9.3.1",
+		"typescript": "^4.7.4",
 		"vscode-test": "^1.3.0",
-		"webpack": "^4.46.0",
-		"webpack-cli": "^3.3.11"
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0"
 	},
 	"dependencies": {
 		"@cvrg-report/clover-json": "^0.3.0",
@@ -120,5 +120,10 @@
 		"jacoco-parse": "2.0.1",
 		"lcov-parse": "1.0.0",
 		"rxjs": "^6.5.5"
+	},
+	"overrides": {
+		"minimistxs": "^1.2.6",
+		"mocha": "^7.1.1",
+		"mkdirp": "^0.5.6"
 	}
 }
